tests/approval/snapshots/approval_sqlite__list_tools.snap
---
source: tests/approval/sqlite.rs
assertion_line: 37
expression: tools
---
[
  {
    "name": "dropTable",
    "title": "Drop Table",
    "description": "Drop a table from the database.\n\n<usecase>\nUse when:\n- Removing a table that is no longer needed\n- Cleaning up test or temporary tables\n</usecase>\n\n<examples>\n✓ \"Drop the temp_logs table\" → dropTable(table=\"temp_logs\")\n✗ \"Delete rows from a table\" → use writeQuery with DELETE\n</examples>\n\n<safety>\nIMPORTANT: This permanently deletes the table and ALL its data. This action cannot be undone.\n</safety>\n\n<what_it_returns>\nA confirmation message with the dropped table name.\n</what_it_returns>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `dropTable` tool.",
      "properties": {
        "table": {
          "description": "Name of the table to drop. Must contain only alphanumeric characters and underscores.",
          "type": "string"
        }
      },
      "required": [
        "table"
      ],
      "title": "DropTableRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for tools with no structured return data.",
      "properties": {
        "message": {
          "description": "Description of the completed operation.",
          "type": "string"
        }
      },
      "required": [
        "message"
      ],
      "title": "MessageResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": false,
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": false
    }
  },
  {
    "name": "explainQuery",
    "title": "Explain Query",
    "description": "Return the execution plan for a SQL query to diagnose performance. Use this tool instead of running EXPLAIN directly through readQuery — it provides structured output via EXPLAIN QUERY PLAN.\n\n<usecase>\nUse when:\n- A query runs slowly and you need to understand why\n- Understanding how SQLite will scan tables and use indexes\n- Deciding whether to add an index\n</usecase>\n\n<when_not_to_use>\n- Running actual queries → use readQuery or writeQuery\n- Checking table structure → use listTables with `detailed: true`\n</when_not_to_use>\n\n<examples>\n✓ \"Why is my SELECT on orders slow?\" → explainQuery(query=\"SELECT ...\")\n✓ \"How will SQLite execute this join?\" → explainQuery\n✗ \"Run this SELECT\" → use readQuery\n</examples>\n\n<what_it_returns>\nA JSON array of EXPLAIN QUERY PLAN rows showing how SQLite will scan tables, use indexes, and order operations.\n</what_it_returns>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `explainQuery` tool.",
      "properties": {
        "query": {
          "description": "The SQL query to explain.",
          "type": "string"
        }
      },
      "required": [
        "query"
      ],
      "title": "ExplainQueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `writeQuery` and `explainQuery` tools.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name.",
          "items": true,
          "type": "array"
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true
    }
  },
  {
    "name": "listTables",
    "title": "List Tables",
    "description": "List tables in the connected database, optionally filtered and/or with full metadata.\n\n<usecase>\nUse when:\n- Exploring a database to find relevant tables (brief mode, default).\n- Searching for a table by partial name (pass `search`).\n- Inspecting a table's columns, constraints, indexes, and triggers before writing a query (pass `detailed: true`). This supersedes the legacy `getTableSchema` workflow.\n</usecase>\n\n<parameters>\n- `cursor` — Opaque pagination cursor; echo the prior response's `nextCursor`.\n- `search` — Case-insensitive filter on table names via `LIKE`. `%` matches any sequence; `_` matches a single character.\n- `detailed` — When `true`, returns full metadata objects keyed by table name instead of bare name strings. Default `false`.\n</parameters>\n\n<examples>\n✓ \"What tables are in this database?\" → listTables()\n✓ \"Find the orders table\" → listTables(search=\"order\")\n✓ \"What columns does orders have?\" → listTables(search=\"orders\", detailed=true)\n</examples>\n\n<what_it_returns>\nBrief mode (default): a sorted JSON array of table-name strings, e.g. `[\"customers\", \"orders\"]`.\nDetailed mode: a JSON object keyed by table name; each value carries `schema`, `kind`, `owner`, `comment`, `columns`, `constraints`, `indexes`, and `triggers` (the name is the key and is not repeated inside the value). Keys iterate in the same alphabetical order brief mode uses. Example: `{\"orders\": {\"schema\": \"main\", \"kind\": \"TABLE\", ...}}`.\n</what_it_returns>\n\n<pagination>\nPaginated. Pass the prior response's `nextCursor` as `cursor` to fetch the next page. The `search` filter must stay the same across pages for cursor continuity.\n</pagination>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `SQLite` `listTables` tool — supports optional search filter and detailed mode.",
      "properties": {
        "cursor": {
          "default": null,
          "description": "Opaque pagination cursor. Omit (or pass `null`) for the first page.\nOn subsequent calls, pass the `nextCursor` returned by the previous\nresponse verbatim. Cursors are opaque — do not parse, modify, or persist.",
          "type": [
            "string",
            "null"
          ]
        },
        "detailed": {
          "default": false,
          "description": "When `true`, each returned entry is a full metadata object (columns,\nconstraints, indexes, triggers); when `false` or omitted, each entry\nis the bare table-name string.",
          "type": "boolean"
        },
        "search": {
          "default": null,
          "description": "Optional case-insensitive filter on table names. The input is used within a `LIKE`\nclause: `%` matches any sequence of characters and `_` matches any single character.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "title": "ListTablesRequest",
      "type": "object"
    },
    "outputSchema": {
      "$defs": {
        "TableEntries": {
          "anyOf": [
            {
              "description": "Brief mode: sorted array of bare table-name strings.",
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            {
              "additionalProperties": true,
              "description": "Detailed mode: name-keyed map; insertion order matches the SQL `ORDER BY` sort.",
              "type": "object"
            }
          ],
          "description": "Two-shape table listing payload: bare names in brief mode, name-keyed map in detailed mode.\n\nChosen by the handler based on [`ListTablesRequest::detailed`]. Serialises untagged: brief\nmode becomes a JSON array of strings, detailed mode becomes a JSON object whose keys are\ntable names and whose values are the per-table metadata."
        }
      },
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `listTables` tool.",
      "properties": {
        "nextCursor": {
          "description": "Opaque cursor pointing to the next page. Absent when this is the final page.",
          "type": [
            "string",
            "null"
          ]
        },
        "tables": {
          "$ref": "#/$defs/TableEntries",
          "description": "Page of matching tables. Shape depends on the request's `detailed` flag."
        }
      },
      "required": [
        "tables"
      ],
      "title": "ListTablesResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "listTriggers",
    "title": "List Triggers",
    "description": "List all triggers in the connected SQLite database.\n\n<usecase>\nUse when:\n- Investigating side-effects on INSERT/UPDATE/DELETE for a table\n- Auditing trigger coverage across a database\n- The user asks what triggers fire in the database\n</usecase>\n\n<examples>\n✓ \"What triggers are in this database?\"\n✓ \"Does a user-audit trigger exist?\" → listTriggers to check\n✗ \"Show me a trigger's body\" → use readQuery against sqlite_schema\n</examples>\n\n<what_it_returns>\nA sorted JSON array of trigger name strings.\n</what_it_returns>\n\n<pagination>\nPaginated. Pass the prior response's `nextCursor` as `cursor` to fetch the next page.\n</pagination>",
    "inputSchema": {
      "properties": {},
      "type": "object"
    },
    "outputSchema": {
      "$defs": {
        "TriggerEntries": {
          "anyOf": [
            {
              "description": "Brief mode: sorted array of bare trigger-name strings.",
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            {
              "additionalProperties": true,
              "description": "Detailed mode: name-keyed map; insertion order matches the SQL `ORDER BY` sort.",
              "type": "object"
            }
          ],
          "description": "Two-shape trigger listing payload: bare names in brief mode, name-keyed map in detailed mode.\n\nChosen by the handler based on the request's `detailed` flag. Serialises untagged: brief\nmode becomes a JSON array of strings, detailed mode becomes a JSON object whose keys are\ntrigger names and whose values are the per-trigger metadata."
        }
      },
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `listTriggers` tool.",
      "properties": {
        "nextCursor": {
          "description": "Opaque cursor pointing to the next page. Absent when this is the final page.",
          "type": [
            "string",
            "null"
          ]
        },
        "triggers": {
          "$ref": "#/$defs/TriggerEntries",
          "description": "Page of matching triggers. Shape depends on the request's `detailed` flag."
        }
      },
      "required": [
        "triggers"
      ],
      "title": "ListTriggersResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "listViews",
    "title": "List Views",
    "description": "List all views in the connected SQLite database.\n\n<usecase>\nUse when:\n- Exploring what views exist in the database alongside tables\n- Verifying a view exists before querying it\n- The user asks what views are available\n</usecase>\n\n<examples>\n✓ \"What views are in this database?\"\n✓ \"Does an active_users view exist?\" → listViews to check\n✗ \"Show me the columns of a view\" → use listTables with `detailed: true` instead\n</examples>\n\n<what_it_returns>\nA sorted JSON array of view name strings.\n</what_it_returns>\n\n<pagination>\nPaginated. Pass the prior response's `nextCursor` as `cursor` to fetch the next page.\n</pagination>",
    "inputSchema": {
      "properties": {},
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `listViews` tool.",
      "properties": {
        "nextCursor": {
          "description": "Opaque cursor pointing to the next page. Absent when this is the final page.",
          "type": [
            "string",
            "null"
          ]
        },
        "views": {
          "description": "Sorted list of view names for this page.",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "required": [
        "views"
      ],
      "title": "ListViewsResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "readQuery",
    "title": "Read Query",
    "description": "Execute a read-only SQL query. Allowed statements: SELECT, EXPLAIN.\n\n<usecase>\nUse when:\n- Querying data from tables (SELECT with WHERE, JOIN, GROUP BY, etc.)\n- Aggregations: COUNT, SUM, AVG, GROUP BY, HAVING\n- Checking data existence or counts\n</usecase>\n\n<when_not_to_use>\n- Data changes (INSERT, UPDATE, DELETE) → use writeQuery\n- Query performance analysis → use explainQuery\n- Discovering tables or columns → use listTables (pass `detailed: true` for columns)\n</when_not_to_use>\n\n<examples>\n✓ \"SELECT * FROM users WHERE status = 'active'\"\n✓ \"SELECT COUNT(*) FROM orders GROUP BY region\"\n✗ \"INSERT INTO users ...\" → use writeQuery\n✗ \"EXPLAIN SELECT ...\" → use explainQuery for structured analysis\n</examples>\n\n<what_it_returns>\nA JSON array of row objects, each keyed by column name.\n</what_it_returns>\n\n<pagination>\n`SELECT` results are paginated. Pass the prior response's `nextCursor` as `cursor` to fetch the next page. `EXPLAIN` returns a single page and ignores `cursor`.\n</pagination>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `readQuery` tool.",
      "properties": {
        "cursor": {
          "default": null,
          "description": "Opaque pagination cursor. Omit (or pass `null`) for the first page.\nOn subsequent calls, pass the `nextCursor` returned by the previous\nresponse verbatim. Cursors are opaque — do not parse, modify, or persist.\nIgnored for `EXPLAIN` statements.",
          "type": [
            "string",
            "null"
          ]
        },
        "query": {
          "description": "The SQL query to execute.",
          "type": "string"
        }
      },
      "required": [
        "query"
      ],
      "title": "ReadQueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `readQuery` tool.",
      "properties": {
        "nextCursor": {
          "description": "Opaque cursor pointing to the next page. Absent when this is the final\npage, when the result fits in one page, or when the statement is a\nnon-`SELECT` kind that does not paginate (e.g. `SHOW`, `EXPLAIN`).",
          "type": [
            "string",
            "null"
          ]
        },
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name.",
          "items": true,
          "type": "array"
        }
      },
      "required": [
        "rows"
      ],
      "title": "ReadQueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true
    }
  },
  {
    "name": "writeQuery",
    "title": "Write Query",
    "description": "Execute a write SQL query (INSERT, UPDATE, DELETE, CREATE, ALTER, DROP).\n\n<usecase>\nUse when:\n- Inserting, updating, or deleting rows\n- Creating or altering tables, indexes, views, or other schema objects\n- Any data modification operation\n</usecase>\n\n<when_not_to_use>\n- Read-only queries (SELECT) → use readQuery\n- Query performance analysis → use explainQuery\n</when_not_to_use>\n\n<examples>\n✓ \"INSERT INTO users (name, email) VALUES ('Alice', 'alice@example.com')\"\n✓ \"UPDATE orders SET status = 'shipped' WHERE id = 42\"\n✓ \"CREATE TABLE logs (id INTEGER PRIMARY KEY, message TEXT)\"\n✗ \"SELECT * FROM users\" → use readQuery\n</examples>\n\n<what_it_returns>\nA JSON array of affected/returning row objects, each keyed by column name.\n</what_it_returns>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `writeQuery` tool.",
      "properties": {
        "query": {
          "description": "The SQL query to execute.",
          "type": "string"
        }
      },
      "required": [
        "query"
      ],
      "title": "QueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `writeQuery` and `explainQuery` tools.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name.",
          "items": true,
          "type": "array"
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": false,
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": true
    }
  }
]
